--- a/src/static/css/app.css
+++ b/src/static/css/app.css
@@ -1,3 +1,7 @@
 body {
     -webkit-user-select: none;
 }
+
+a.sidebar-link.sanduk-tool[data-sanduk-tool-isActive="true"] {
+    border-left: 2px solid dodgerblue;
+}
