using bootstrap5, updated base64 encoder decoder
epoch added

jwt decoder added, plugin ace added

uuid v4, v5 added

fixing spacing

ui spacing fix, added xml to json

refactor

xml formatter

json formatter

markdown added

editor addded

get active tab id, refactor

--- a/src/static/css/app.css
+++ b/src/static/css/app.css
@@ -1,7 +1,17 @@
+html {
+    margin: 0;
+    padding: 0;
+}
 body {
     -webkit-user-select: none;
 }
 
-a.sidebar-link.sanduk-tool[data-sanduk-tool-isActive="true"] {
-    border-left: 3px solid dodgerblue;
+#v-pills-tab {
+    width: 250px;
+    height: 100vh;
+    border-right: 1px solid #eee;
+}
+
+#v-pills-tabContent {
+    width: calc(100% - 250px);
 }
