sidebar menu item size

--- a/src/static/css/app.css
+++ b/src/static/css/app.css
@@ -24,3 +24,7 @@ i[class*="bi-"] {
 .sanduk-dropdown-toggle-without-arrow::after {
     content: none !important;
 }
+
+.sanduk-sidebar-menu-item {
+    font-size: 0.9em;
+}
