checking identical content, pop info helper added

--- a/src/static/css/app.css
+++ b/src/static/css/app.css
@@ -64,7 +64,7 @@ i[class*="bi-"] {
 
 .sanduk-compare-tool-pre .sanduk-compare-tool-line {
     display: inline;
-    line-height: 0;
+    font-size: 15px;
 }
 
 /*.sanduk-compare-tool-pre .sanduk-compare-tool-line:before {*/
