--- a/src/static/css/app.css
+++ b/src/static/css/app.css
@@ -62,28 +62,34 @@ i[class*="bi-"] {
     counter-reset: line;
 }
 
-.sanduk-compare-tool-pre .sanduk-compare-tool-line {
-    display: inline;
-    font-size: 15px;
-}
+/*.sanduk-compare-tool-pre .sanduk-compare-tool-line {*/
+/*    display: inline;*/
+/*    font-size: 15px;*/
+/*}*/
 
 /*.sanduk-compare-tool-pre .sanduk-compare-tool-line:before {*/
 /*    counter-increment: line;*/
 /*    content: counter(line);*/
 /*}*/
 
-.sanduk-compare-tool-line .sanduk-diff-del-op {
+.sanduk-diff-del-op {
     background-color: #f8a39d;
 }
 
-.sanduk-compare-tool-line.sanduk-line-changed.sanduk-del-op {
-    background-color: #fcd6d0;
-}
+/*.sanduk-line-changed.sanduk-del-op {*/
+/*    background-color: #fcd6d0;*/
+/*}*/
 
-.sanduk-compare-tool-line .sanduk-diff-ins-op {
+.sanduk-diff-ins-op {
     background-color: #85f685;
 }
 
-.sanduk-compare-tool-line.sanduk-line-changed.sanduk-ins-op {
-    background-color: #c9ffc9;
+/*.sanduk-line-changed.sanduk-ins-op {*/
+/*    background-color: #c9ffc9;*/
+/*}*/
+
+.sanduk-diff-context-added,
+.sanduk-diff-context-removed {
+    background-color: #eee;
+    color: #eee;
 }
